# BarkBrowser

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/Common/: not_implemented_exception.hpp
src/Engine/: CMakeLists.txt  main.cpp
src/Engine/html/: tokenizer.cpp  tokenizer.hpp
test/: .clang-tidy  CMakeLists.txt  main.cpp
test/Engine/html/: tokenizer_tests.cpp
